test/parse/relaxed/bad/nodigitnorminusinvline.sol
s SATISFIABLE
v 1 2 nominunordigitg 3 4 0
